Fixed header appearing behind other content

--- a/packages/ui/src/styles/Header.module.scss
+++ b/packages/ui/src/styles/Header.module.scss
@@ -1,7 +1,10 @@
 .container {
+  position: relative;
+  z-index: 10;
   display: grid;
   place-content: center;
   padding: 0.5rem 1rem;
+  background-color: white;
   box-shadow: 0 0 0.75rem 0 rgba(0, 0, 0, 0.1);
 }
 
